Fixed the position of the of senderID heading so that it is aligned with the other text onscreen.

--- a/src/css/back.css
+++ b/src/css/back.css
@@ -425,7 +425,7 @@ form.process.decrypted  div.senderID {
 form.process div.senderID h3 {
 	position: absolute;
 	top: -20px;
-	left :0;
+	left: 10px;
 	opacity: 0;
 }
 
